# Anjay-pico-client

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
anjay_init/: CMakeLists.txt  main.c
common/compat/: time.c
common/compat/mbedtls/: mbedtls_timing.c  timing_alt.h
common/compat/threading/: avs_freertos_condvar.c  avs_freertos_init_once.c  avs_freertos_mutex.c  avs_freertos_structs.h
common/config/: mbedtls.h
common/config/anjay/: anjay_config.h
common/config/avsystem/coap/: avs_coap_config.h
common/config/avsystem/commons/: avs_commons_config.h  lwip-posix-compat.h
common/src/: freertos.c
firmware_update/: CMakeLists.txt  README.md  firmware_update.c  firmware_update.h  flash_aligned_writer.c  flash_aligned_writer.h  main.c
mandatory_objects/: CMakeLists.txt  main.c
secure_communication/: CMakeLists.txt  main.c
temperature_object/: CMakeLists.txt  README.md  main.c  temperature_sensor.c
temperature_object_ds18b20/: CMakeLists.txt  Pico_DS18B20.fzz  README.md  ds18b20.c  ds18b20.h  temperature_sensor.c  temperature_sensor.h
temperature_object_lm35/: CMakeLists.txt  README.md  lm35.c  lm35.h  main.c  temperature_sensor.c  temperature_sensor.h
temperature_object_mpl3115a2/: CMakeLists.txt  Pico_MPL3115A2.fzz  README.md  main.c  mpl3115a2.c  mpl3115a2.h  temperature_sensor.c  temperature_sensor.h
time_object/: CMakeLists.txt  README.md  main.c  time_object.c  time_object.h
